<resources>
    <string name="app_name">YourNews</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username/Email</string>
    <string name="captions">Curated just for you</string>
    <string name="tapAnywhere">Tap anywhere to continue</string>
    <string name="News">News</string>
    <string name="BBC">BBC</string>
    <string name="CNN">CNN</string>
    <string name="WSJ">WSJ</string>
    <string name="RT">RT</string>
    <string name="NYT">NYT</string>
    <string name="Sports">Sports</string>
    <string name="Sky">Sky</string>
    <string name="CBS">CBS</string>
    <string name="BR">BR</string>
    <string name="ESPN">ESPN</string>
    <string name="NBC">NBC</string>
    <string name="Confirm">Confirm</string>
    <string name="topMenu">Menu</string>
    <string-array name="menu">
        <item>Account Settings</item>
        <item>Latest News</item>
        <item>Recommendations</item>
        <item>Bookmarks</item>
        <item>Help</item>
    </string-array>
    <string name="weather">Weather Today</string>
    <string name="LatestHeadlines">Latest Headlines</string>
    <string name="today">Today</string>
    <string name="Account">Account</string>
    <string name="userInfo">Username :  </string>
    <string name="YourSources">Your News Sources</string>
    <string name="SearchResults">Your Search Results</string>
    <string name="bookmarks">Your Bookmarks</string>
    <string name="yourRecommends">Your Recommendations</string>
    <string name="latestNews">Latest News</string>
    <string name="title_activity_main_app">MainApp</string>
    <string name="notFound">No results found</string>
    <string name="HelpTitle">Help</string>
    <string name="about">About this App</string>

    <string name="aboutBody">
        YourNews is a news application that curates news articles specially for
        you, the user.\n\nOur Artificial Intelligence API is based on your clicks and
        searches.\n\nOur AI API recommends you news articles uniquely picked from
        the billions of news articles on the Internet because it
        knows that you are interested in those topics.
    </string>

    <string name="howtouseHead">
        How to Use
    </string>

    <string name="howtouseBody">
        Step 1: Register an account with YourNews so that we can record your searches and clicks.\n\nStep 2: Use the app as you would like any other news application.\n\nStep 3: Click on Recommendations in the menu to get recommended news articles.
    </string>

    <string name="howtouseEnd">
        \n\nAnd it is that easy to get recommended articles by our AI API.
    </string>
    <string name="title_activity_airecommends">AIrecommends</string>

    <string name="loginHelpHead">Default Account</string>

    <string name="loginHelpBody">Username:\t\tadmin\nPassword:\t\tadmin</string>

</resources>