<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.powjh.yournews.AccountRec"
    android:orientation="vertical"
    android:columnCount="5"
    android:rowCount="12">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:text="@string/Account"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="32sp"
        android:layout_column="0"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userInfo"
        android:textSize="24sp"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:id="@+id/userName"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:text="@string/YourSources"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="32sp"
        android:layout_marginLeft="12dp"/>


    <TextView
        android:id="@+id/News"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/News"
        android:textSize="24sp"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_marginLeft="12dp"/>

    <ToggleButton
        android:id="@+id/BBC"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_column="0"
        android:layout_marginLeft="8dp"
        android:layout_row="4"
        android:paddingLeft="16dp"
        android:textOn="@string/BBC"
        android:textOff="@string/BBC"
        android:onClick="checkBBC"/>

    <ToggleButton
        android:id="@+id/CNN"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_column="1"
        android:layout_row="4"
        android:paddingLeft="16dp"
        android:textOn="@string/CNN"
        android:textOff="@string/CNN"
        android:onClick="checkCNN"/>

    <ToggleButton
        android:id="@+id/WSJ"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_column="2"
        android:layout_row="4"
        android:paddingLeft="16dp"
        android:textOn="@string/WSJ"
        android:textOff="@string/WSJ"
        android:onClick="checkWSJ"/>

    <ToggleButton
        android:id="@+id/RT"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_column="3"
        android:layout_row="4"
        android:paddingLeft="16dp"
        android:textOn="@string/RT"
        android:textOff="@string/RT"
        android:onClick="checkRT"/>

    <ToggleButton
        android:id="@+id/NYT"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_column="4"
        android:layout_row="4"
        android:paddingLeft="16dp"
        android:textOn="@string/NYT"
        android:textOff="@string/NYT"
        android:onClick="checkNYT"/>

    <TextView
        android:id="@+id/Sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sports"
        android:layout_columnSpan="2"
        android:textSize="24sp"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_marginLeft="12dp"/>

    <ToggleButton
        android:id="@+id/ESPN"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:paddingLeft="16dp"
        android:layout_column="0"
        android:layout_row="6"
        android:layout_marginLeft="8dp"
        android:textOn="@string/ESPN"
        android:textOff="@string/ESPN"
        android:onClick="checkESPN"/>

    <ToggleButton
        android:id="@+id/BR"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_column="1"
        android:layout_row="6"
        android:paddingLeft="16dp"
        android:textOn="@string/BR"
        android:textOff="@string/BR"
        android:onClick="checkBR"/>

    <ToggleButton
        android:id="@+id/CBS"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_column="2"
        android:layout_row="6"
        android:paddingLeft="16dp"
        android:textOn="@string/CBS"
        android:textOff="@string/CBS"
        android:onClick="checkCBS"/>

    <ToggleButton
        android:id="@+id/Sky"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_column="3"
        android:layout_row="6"
        android:paddingLeft="16dp"
        android:textOn="@string/Sky"
        android:textOff="@string/Sky"
        android:onClick="checkSky"/>

    <ToggleButton
        android:id="@+id/NBC"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_column="4"
        android:layout_row="6"
        android:paddingLeft="16dp"
        android:textOn="@string/NBC"
        android:textOff="@string/NBC"
        android:onClick="checkNBC"/>

    <Button
        android:id="@+id/confirmButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="11"
        android:text="@string/Confirm"
        android:onClick="callHomePage"/>

</GridLayout>