<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/logo"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHorizontal_bias="1.0"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="107dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_centerInParent="true"
        android:layout_below="@id/imageView"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <TextView
        android:paddingTop="8dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/textView"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captions" />

    <TextView
        android:paddingTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView2"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tapAnywhere" />
</RelativeLayout>