<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.powjh.yournews.MainApp">

    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <SearchView
             android:paddingTop="8dp"
             android:id="@+id/Search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:queryHint="Enter keywords or tags"/>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/SearchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="8dp"
                android:text="@string/SearchResults"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp" />

            <ProgressBar
                android:id="@+id/searchProgress"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <FrameLayout
                android:id="@+id/SearchResultsFrag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
        <LinearLayout
            android:paddingLeft="8dp"
            android:id="@+id/rest"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
             <TextView
                 android:paddingTop="8dp"
                 android:id="@+id/Weather"
                 android:text="@string/weather"
                 android:textColor="@color/colorPrimary"
                 android:textSize="22sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="8dp"/>

             <FrameLayout
                 android:id="@+id/weather_Box"
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:scrollbars="none"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"/>

             <TextView
                 android:id="@+id/LatestHeadlines"
                 android:text="@string/LatestHeadlines"
                 android:textColor="@color/colorPrimary"
                 android:textSize="22sp"
                 android:paddingTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />

             <FrameLayout
                 android:background="#FFFFFF"
                 android:paddingTop="8dp"
                 android:id="@+id/LatestHeadlines_box"
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:scrollbars="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

                 <ProgressBar
                     android:id="@+id/progress"
                     xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
                     android:layout_height="60dp" />

             </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- For sliding drawer-->
    <ListView
        android:id="@+id/drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="#ffffff"/>

</android.support.v4.widget.DrawerLayout>
